<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/displayEvent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateEventFragment" >

    <ImageButton
        android:id="@+id/exitDisplayEventImageButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="2dp"
        android:background="@null"
        android:src="@drawable/ic_close_48px"
        android:contentDescription="@string/image_button_exit_message" />

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" >

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/displayEventCollapseToobar"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:elevation="0dp"
            app:expandedTitleMarginBottom="80dp"
            app:layout_scrollFlags="scroll|enterAlwaysCollapsed|snap"
            app:contentScrim="@color/colorPrimaryLight" >

            <ImageView
                android:id="@+id/displayEventToolbarBackdrop"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:src="@drawable/jarnjarn"
                android:scaleType="centerCrop" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/displayEventToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@null"
                app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:behavior_overlapTop="60dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" >

        <android.support.v7.widget.CardView
            android:id="@+id/flexible.example.cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp"
            app:cardPreventCornerOverlap="true"
            android:layout_margin="8dp" >

            <android.support.constraint.ConstraintLayout
                android:id="@+id/eventCardviewLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp" >

                <ToggleButton
                    android:id="@+id/starButton"
                    style="@style/toggleButton"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/ic_star_toggle_background"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/displayTimePlace"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:maxLines="1"
                    android:text="@string/event_time_message"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toStartOf="@id/starButton"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/displayEventName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:maxLines="2"
                    android:text="@string/event_name_message"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    app:layout_constraintEnd_toStartOf="@id/starButton"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/displayTimePlace" />

                <TextView
                    android:id="@+id/displayOrg"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/org_message"
                    android:textAppearance="?attr/textAppearanceBody2"
                    app:layout_constraintEnd_toStartOf="@id/starButton"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/displayEventName" />

                <View
                    android:id="@+id/cardDividerTitle"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintBottom_toTopOf="@+id/displayDesc"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/displayOrg" />

                <TextView
                    android:id="@+id/displayDesc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-light"
                    android:lineSpacingExtra="8dp"
                    android:text="@string/event_desc_message"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardDividerTitle" />

                <Button
                    android:id="@+id/downloadPDFButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/download_PDF_message"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/displayDesc"/>

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>