<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="8dp"
    app:cardElevation="2dp"
    app:cardPreventCornerOverlap="true" >

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/homeCardView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/home_event_image_height">

        <android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/homeCardViewText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/eventImage" >

            <TextView
                android:id="@+id/timePlace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/event_time_message"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@id/homeCardViewText"
                app:layout_constraintTop_toTopOf="@id/homeCardViewText" />

            <TextView
                android:id="@+id/eventName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:text="@string/event_name_message"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                app:layout_constraintStart_toStartOf="@id/homeCardViewText"
                app:layout_constraintTop_toBottomOf="@id/timePlace" />

            <TextView
                android:id="@+id/eventDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="4"
                android:text="@string/event_desc_message"
                android:textAppearance="?attr/textAppearanceBody2"
                app:layout_constraintStart_toStartOf="@id/homeCardViewText"
                app:layout_constraintTop_toBottomOf="@id/eventName" />

        </android.support.constraint.ConstraintLayout>

        <ImageView
            android:id="@+id/eventImage"
            android:layout_width="@dimen/home_event_image_width"
            android:layout_height="@dimen/home_event_image_height"
            android:background="?attr/colorPrimaryDark"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>